--- a/app/views/new/eligibility.html
+++ b/app/views/new/eligibility.html
@@ -39,7 +39,7 @@
 
         {{ macros.checkboxGroup(code + '-new-min-requirements', [
           {
-            name: 'English language',
+            name: 'English',
             more: moreText
           },
           {
