Document initial vacancies designs

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">December 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/vacancies">Vacancies</a>
+      </h3>
+      <p>
+        First design for changing vacancies at each training location on a course.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/publish-states">Rethinking the publish workflow</a>
       </h3>
       <p>
