Replace "Published" column with "Is it on Find" column

--- a/app/views/example-states.html
+++ b/app/views/example-states.html
@@ -21,7 +21,7 @@
       <tr>
         <th class="subject-col">Course</th>
         <th class="status-col" style="width: 160px">Status</th>
-        <th class="published-col">Last&nbsp;published</th>
+        <th class="published-col">Is it on <abbr title="Find postgraduate teacher training" style="text-decoration: underline; text-decoration-style: dotted;">Find</abbr>?</th>
         <th class="applications-col">Applications</th>
         <th class="type-col">Vacancies</th>
       </tr>
@@ -31,13 +31,13 @@
         <td>
           <a href="/course/E65/28ZC" class="heading-small">Primary (P123)</a>
           <br>
-          <span class="font-xsmall">PGCE with QTS full time – <a href="#">View on website</a></span>
+          <span class="font-xsmall">PGCE with QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td class="nowrap">
-          10 Nov 2018
+          <a href="#">Yes – view online</a>
         </td>
         <td>
           Open
@@ -50,13 +50,13 @@
         <td>
           <a href="/course/E65/28ZC" class="heading-small">Chemistry (PC23)</a>
           <br>
-          <span class="font-xsmall">QTS full time – <a href="#">View on website</a></span>
+          <span class="font-xsmall">QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
-        <td>
-          1 Nov 2018
+        <td class="nowrap">
+          <a href="#">Yes – view online</a>
         </td>
         <td>
           Closed
@@ -75,6 +75,7 @@
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">New</span>
         </td>
         <td>
+          No – still in draft
         </td>
         <td>
         </td>
@@ -85,13 +86,13 @@
         <td>
           <a href="/course/E65/28ZC" class="heading-small">Geography (PP23)</a>
           <br>
-          <span class="font-xsmall">PGCE with QTS full time – <a href="#">View on website</a></span>
+          <span class="font-xsmall">PGCE with QTS full time</span>
         </td>
         <td>
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
-        <td>
-          9 Dec 2018
+        <td class="nowrap">
+          <a href="#">Yes – view online</a>
         </td>
         <td class="nowrap">
           Open from<br />3 Mar 2019
@@ -110,6 +111,7 @@
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-draft">Draft</span>
         </td>
         <td>
+          No – still in draft
         </td>
         <td>
         </td>
@@ -120,14 +122,14 @@
         <td>
           <a href="/course/E65/28ZC" class="heading-small">Physics (D123)</a>
           <br>
-          <span class="font-xsmall">QTS full time – <a href="#">View on website</a></span>
+          <span class="font-xsmall">QTS full time</span>
         </td>
         <td class="nowrap">
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published&nbsp;*</span><br />
           <span class="font-xsmall">* Unpublished changes</span>
         </td>
-        <td>
-          9 Oct 2018
+        <td class="nowrap">
+          <a href="#">Yes – view online</a>
         </td>
         <td>
           Open
@@ -146,7 +148,7 @@
           <span class="phase-tag phase-tag-small phase-tag-table phase-tag-not-running">Withdrawn</span>
         </td>
         <td class="nowrap">
-          Withdrawn on<br />10 Nov 2018
+          No – withdrawn
         </td>
         <td>
           Closed
