Link to quiz in footer

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -37,10 +37,10 @@
 {% block footer_support_links %}
   {% if useAutoStoreData %}
     <ul>
-      <li>
-        <a href="#">Give feedback</a>
+      <li class="bold">
+        <a href="/example-states">Courses quiz</a>
       </li>
-      <li>
+      <!-- <li>
         <a href="#">Terms and conditions</a>
       </li>
       <li>
@@ -48,7 +48,7 @@
       </li>
       <li>
         <a href="#">Cookies</a>
-      </li>
+      </li> -->
       <!-- <li>
         <a href="/prototype-admin/clear-data">Clear data</a>
       </li> -->
