SEND is disability not disabilities

--- a/app/views/new/confirm.html
+++ b/app/views/new/confirm.html
@@ -31,7 +31,7 @@
           </div>
           <div>
             <dt class="cya-question">
-              Special educational needs and disabilities (SEND)
+              Special educational needs and disability (SEND)
             </dt>
             <dd class="cya-answer">
               {% if data[code + '-new-sen'] %}
