--- a/app/views/new/phase.html
+++ b/app/views/new/phase.html
@@ -31,7 +31,7 @@
 
         {{ macros.radioGroup(code + '-new-phase', fields) }}
 
-        <h2 class="heading-medium">Special educational needs and disabilities (SEND)</h2>
+        <h2 class="heading-medium">Special educational needs and disability (SEND)</h2>
         {% set fields = [
             {
               name: 'This is a SEND course'
