Update prototype kit to v8.6 (part 1: simplest files)

--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -10,6 +10,7 @@
 <script src="/public/javascripts/modules/edge.js"></script>
 <script src="/public/javascripts/modules/copy-content.js"></script>
 <script src="/public/javascripts/character-counts.js"></script>
+<script src="/node_modules/govuk-frontend/all.js"></script>
 <script src="/public/javascripts/application.js"></script>
 
 {% if useAutoStoreData %}
