--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,71 +1,78 @@
-{% extends "govuk_template.html" %}
+{% extends "template.njk" %}
+
+{% from "back-link/macro.njk"     import govukBackLink %}
+{% from "breadcrumbs/macro.njk"   import govukBreadcrumbs %}
+{% from "button/macro.njk"        import govukButton %}
+{% from "character-count/macro.njk"  import govukCharacterCount %}
+{% from "checkboxes/macro.njk"    import govukCheckboxes %}
+{% from "date-input/macro.njk"    import govukDateInput %}
+{% from "details/macro.njk"       import govukDetails %}
+{% from "error-message/macro.njk" import govukErrorMessage %}
+{% from "error-summary/macro.njk" import govukErrorSummary %}
+{% from "fieldset/macro.njk"      import govukFieldset %}
+{% from "file-upload/macro.njk"   import govukFileUpload %}
+{% from "input/macro.njk"         import govukInput %}
+{% from "inset-text/macro.njk"    import govukInsetText %}
+{% from "panel/macro.njk"         import govukPanel %}
+{% from "phase-banner/macro.njk"  import govukPhaseBanner %}
+{% from "radios/macro.njk"        import govukRadios %}
+{% from "select/macro.njk"        import govukSelect %}
+{% from "skip-link/macro.njk"     import govukSkipLink %}
+{% from "table/macro.njk"         import govukTable %}
+{% from "tabs/macro.njk"          import govukTabs %}
+{% from "tag/macro.njk"           import govukTag %}
+{% from "textarea/macro.njk"      import govukTextarea %}
+{% from "warning-text/macro.njk"  import govukWarningText %}
+
 {% import 'macros/macros.njk' as macros  %}
 
 {% block head %}
   {% include "includes/head.html" %}
 {% endblock %}
 
-{% block cookie_message %}
-  <p>{{cookieText | safe }}</p>
+{% block pageTitle %}
+  GOV.UK Prototype Kit
 {% endblock %}
 
-{% block proposition_header %}
-  <div class="header-proposition">
-    <div class="content">
-      <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
-      <nav id="proposition-menu">
-        <a href="/" id="proposition-name">
-          {# Set serviceName in config.js. Use a block to override on a page. #}
-          {% block service_name %}
-            {% if serviceName %} {{ serviceName }} {% endif %}
-          {% endblock %}
-        </a>
-
-        <ul id="proposition-links">
-          <li><a href="#">Sign out</a> (<a href="#">Jane Doe</a>)</li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-
+{% block header %}
+  {% include "includes/cookie-banner.html" %}
+  {# Set serviceName in config.js. #}
+  {{ govukHeader({
+    homepageUrl: "/",
+    serviceName: serviceName,
+    serviceUrl: "/",
+    containerClasses: "govuk-width-container"
+  }) }}
 {% endblock %}
 
-{% block header_class %}
-  with-proposition
-{% endblock %}
+{% if useAutoStoreData %}
+  {% block footer %}
+    {{ govukFooter({
+      meta: {
+        items: [
+          {
+            href: "https://govuk-prototype-kit.herokuapp.com/",
+            text: "GOV.UK Prototype Kit " + releaseVersion
+          },
+          {
+            href: "/prototype-admin/clear-data",
+            text: "Clear data"
+          }
+        ]
+      }
+    }) }}
+  {% endblock %}
+{% endif %}
 
-{% block footer_support_links %}
-  {% if useAutoStoreData %}
-    <ul>
-      <li class="bold">
-        <a href="/example-states">Courses quiz</a>
-      </li>
-      <!-- <li>
-        <a href="#">Terms and conditions</a>
-      </li>
-      <li>
-        <a href="#">Privacy policy</a>
-      </li>
-      <li>
-        <a href="#">Cookies</a>
-      </li> -->
-      <!-- <li>
-        <a href="/prototype-admin/clear-data">Clear data</a>
-      </li> -->
-    </ul>
-  {% endif %}
-{% endblock %}
-
-{% block body_start %}
+{% block bodyStart %}
   <div data-module="edge">
 {% endblock %}
 
-{% block body_end %}
+{% block bodyEnd %}
   </div>
-
   {% block scripts %}
     {% include "includes/scripts.html" %}
-    {% block page_scripts %}{% endblock %}
+    {% block pageScripts %}{% endblock %}
   {% endblock %}
-  <!-- GOV.UK Prototype kit {{releaseVersion}} -->
+  <!-- GOV.UK Prototype Kit {{releaseVersion}} -->
 {% endblock %}
