Update lede classes

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -97,7 +97,7 @@
             <h3 class="course-part-task">Course information</h3>
             <!-- <a class="course-part-task-action" href="#">Edit</a> -->
             <div style="overflow: hidden; clear: left; margin-bottom: 30px;"></div>
-            <p class="lede">{{ course.options }}</p>
+            <p class="govuk-body-l">{{ course.options }}</p>
             <dl class="course-part-tasks aligned add-top-margin add-bottom-margin">
               <dt>Level:</dt>
               <dd>{{ course.level }}</dd>
