--- a/app/views/time-spent-where.html
+++ b/app/views/time-spent-where.html
@@ -15,7 +15,7 @@
           </h1>
         </legend>
 
-        <p class="lede">We use this information to help candidates find<br />courses close to them.</p>
+        <p class="govuk-body-l">We use this information to help candidates find<br />courses close to them.</p>
 
         {{ macros.textbox('uni-days', 'Days spent on University campus', 'Liverpool John Moores University')}}
 
