--- a/app/views/new/title.html
+++ b/app/views/new/title.html
@@ -15,7 +15,7 @@
     <div class="column-two-thirds">
       <p>From your answers we’ve created this title for your course:</p>
       <div class="panel panel-border-wide add-double-bottom-margin">
-        <p class="lede">
+        <p class="govuk-body-l">
           {{ generatedTitle }}
         </p>
       </div>
