--- a/docs/views/examples/blank-unbranded.html
+++ b/docs/views/examples/blank-unbranded.html
@@ -11,7 +11,7 @@
   <h1 class="govuk-heading-xl">
     Example without GOV.UK branding
   </h1>
-  <p class="lede">
+  <p class="govuk-body-l">
     This page doesn't use New Transport or display the GOV.UK header and footer.
   </p>
 
