--- a/docs/views/examples/elements/typography.html
+++ b/docs/views/examples/elements/typography.html
@@ -20,7 +20,7 @@
       A 48px heading
     </h1>
 
-    <p class="lede">
+    <p class="govuk-body-l">
       This is an intro paragraph at 24px. Maecenas faucibus mollis interdum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor. Vestibulum id ligula porta felis euismod semper.
     </p>
 
